refactoring the repeated exception throw