@@ -1,14 +1,17 @@
 package com.flipkart.varadhi.produce.services;
 
+import java.time.Duration;
+import java.time.Instant;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
+
 import com.flipkart.varadhi.common.EntityReadCache;
 import com.flipkart.varadhi.common.Result;
 import com.flipkart.varadhi.common.exceptions.ProduceException;
 import com.flipkart.varadhi.common.exceptions.ResourceNotFoundException;
-import com.flipkart.varadhi.entities.InternalCompositeTopic;
-import com.flipkart.varadhi.entities.Message;
-import com.flipkart.varadhi.entities.Offset;
-import com.flipkart.varadhi.entities.StorageTopic;
-import com.flipkart.varadhi.entities.VaradhiTopic;
+import com.flipkart.varadhi.entities.*;
 import com.flipkart.varadhi.produce.ProduceResult;
 import com.flipkart.varadhi.produce.config.ProducerOptions;
 import com.flipkart.varadhi.produce.otel.ProducerMetricsEmitter;
@@ -16,13 +19,6 @@ import com.flipkart.varadhi.spi.services.Producer;
 import com.github.benmanes.caffeine.cache.Caffeine;
 import com.github.benmanes.caffeine.cache.LoadingCache;
 import lombok.extern.slf4j.Slf4j;
-
-import java.time.Duration;
-import java.time.Instant;
-import java.util.Optional;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.TimeUnit;
-import java.util.function.Function;
 
 /**
  * Service responsible for producing messages to topics in Varadhi.
@@ -125,10 +121,12 @@ public final class ProducerService {
         String varadhiTopicName,
         ProducerMetricsEmitter metricsEmitter
     ) {
-        Optional<VaradhiTopic> topic = topicCache.getEntity(varadhiTopicName);
+        Optional<VaradhiTopic> topic = topicCache.get(varadhiTopicName);
 
         if (topic.isEmpty() || !topic.get().isActive()) {
-            throw new ResourceNotFoundException(String.format("Topic(%s) is not active.", varadhiTopicName));
+            throw new ResourceNotFoundException(
+                "Topic(%s) ".formatted(varadhiTopicName) + (topic.isEmpty() ? "does not exist" : "is not active")
+            );
         }
 
         return produceToValidTopic(message, topic.get(), metricsEmitter);
